--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		</div>
 
 		<div>
-			<h2 id="section-3">Системные требования Dying Light 2</h2>
+			<h2 id="section-3">Передвижение по городу</h2>
 			<p></p>
 			<img src="image/dy2.jpg" width="400" alt="Упс, здесь должна быть картинка!">
 			<p>Передвижение по городу выполнено в стиле первой части. Внизу лучше не появляться — там повсюду снуют зомби и
