--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<li><a href="#section-1">О чём вообще игра?</a></li>
 				<li><a href="#section-2">Как она играется?</a>
 				</li>
-				<li><a href="#section-3">Системные требования Dying Light 2</a></li>
+				<li><a href="#section-3">Передвижение по городу</a></li>
 				<li><a href="#section-4">Где купить Dying light 2</a></li>
 			</ul>
 
